# realtime-ltx-video-generation-demo

./: README.md  pyproject.toml  requirements.txt
dashboard/: package-lock.json  package.json  tailwind.config.js  types.ts
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/api/fal/proxy/: route.ts
dashboard/components/: AIPerformanceBreakdown.tsx  GenerationHistory.tsx  NarrationPanel.tsx  PerformanceMetrics.tsx  QueueVisualization.tsx  RealtimeChart.tsx  TestControlPanel.tsx
dashboard/hooks/: useRealtimeData.ts  useRealtimeWebSocket.ts
dashboard/utils/: falApi.ts  falUpload.ts
streaming_pipeline/: app.py  models.py  streaming_service.py
streaming_pipeline/audio/: __init__.py  tts_generator.py
streaming_pipeline/core/: streaming_engine.py
streaming_pipeline/input/: twitch_listener.py
streaming_pipeline/models/: __init__.py  api.py  base.py  streaming.py  twitch.py  video.py
streaming_pipeline/output/: rtmp_streamer.py
streaming_pipeline/postprocessing/: text_overlay.py
streaming_pipeline/prompt_generation/: prompt_generator.py
streaming_pipeline/prompts/: system_prompt.txt  system_prompt_visual.txt  system_prompt_visual_narrated.txt
streaming_pipeline/utils/: logger_config.py  monitoring.py
streaming_pipeline/video_generation/: video_generator.py
